--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -7,7 +7,7 @@
                         style="color: #ec615b;">UX Designer</span> based in Toronto
                 </h1> -->
                 <h1>
-                    Hello, I am Saifil.<br /> <span style="color: #5222D0;">Front End Developer</span> based in Toronto
+                    Hello, I am Saifil.<br /> <span style="color: #5222D0;">Software Developer</span> based in Toronto
                 </h1>
             </div>
             <div class="col-md-6 my-auto text-center">
