--- a/src/app/project-detail/project-detail.component.html
+++ b/src/app/project-detail/project-detail.component.html
@@ -9,7 +9,7 @@
                 <button class="btn btn-md demo-btn mr-2"><i class="fas fa-link mr-2"></i>Live</button>
             </a>
             <a href="{{Project.GitLink}}" target="blank">
-                <button class="btn btn-md git-btn"><i class="fab fa-github mr-2"></i>GitHub</button>
+                <button class="btn btn-md git-btn"><i class="fab fa-github mr-2"></i>Source Code</button>
             </a>
         </div>
         <div class="col-md-2"></div>
