--- a/src/app/skills/skills.component.html
+++ b/src/app/skills/skills.component.html
@@ -6,7 +6,7 @@
                 <h3 class="mb-3">Skills & Tools</h3>
             </div>
             <div *ngIf="!IsHomePage" class="col-md-8">
-                <h5 class="mb-3">Technolgies used</h5>
+                <h5 class="mb-3">Tools and Technologies</h5>
             </div>
             <div class="col-md-2"></div>
         </div>
