--- a/src/app/ux-projects/plato/plato.component.html
+++ b/src/app/ux-projects/plato/plato.component.html
@@ -4,7 +4,7 @@
             <div class="row" style="margin-bottom: 20px;">
                 <div class="col-md-2"></div>
                 <div class="col-md-8">
-                    <img src="../../assets/images/plato-cover-inside.png" class="img-fluid">
+                    <img src="../../assets/images/plato/plato-cover-inside.png" class="img-fluid">
                 </div>
                 <div class="col-md-2"></div>
             </div>
@@ -100,14 +100,14 @@
                 <div class="col-md-2"></div>
                 <div class="col-md-8 narrow-container px-5 py-3">
                     <h3>User Research</h3>
-                    <img src="../../assets/images/plato-persona-1.png" style="height: auto; width: 100%;">
+                    <img src="../../assets/images/plato/plato-persona-1.png" style="height: auto; width: 100%;">
                 </div>
                 <div class="col-md-2"></div>
             </div>
             <div class="row">
                 <div class="col-md-2"></div>
                 <div class="col-md-8 narrow-container px-5 py-3">
-                    <img src="../../assets/images/plato-persona-2.png" style="height: auto; width: 100%;">
+                    <img src="../../assets/images/plato/plato-persona-2.png" style="height: auto; width: 100%;">
                 </div>
                 <div class="col-md-2"></div>
             </div>
@@ -140,7 +140,7 @@
                 <div class="col-md-2"></div>
                 <div class="col-md-8 narrow-container px-5 py-3">
                     <h3>User Journey Mapping</h3>
-                    <img src="../../assets/images/User Journey Mapping.jpg" style="height: auto; width: 100%;">
+                    <img src="../../assets/images/plato/User Journey Mapping.jpg" style="height: auto; width: 100%;">
                 </div>
                 <div class="col-md-2"></div>
             </div>
@@ -161,25 +161,25 @@
                 <div class="col-md-2"></div>
                 <div class="col-md-8 narrow-container px-5 py-3">
                     <h5>Landing Page</h5>
-                    <img src="../../assets/images/plato1.png" class="img-fluid image-wrapper">
+                    <img src="../../assets/images/plato/plato1.png" class="img-fluid image-wrapper">
                     <h5>Career Preference Page</h5>
-                    <img src="../../assets/images/plato2.png" class="img-fluid image-wrapper">
+                    <img src="../../assets/images/plato/plato2.png" class="img-fluid image-wrapper">
                     <h5>Topic Preference Page</h5>
-                    <img src="../../assets/images/plato3.png" class="img-fluid image-wrapper">
+                    <img src="../../assets/images/plato/plato3.png" class="img-fluid image-wrapper">
                     <h5>Home Page</h5>
-                    <img src="../../assets/images/plato4.png" class="img-fluid image-wrapper">
+                    <img src="../../assets/images/plato/plato4.png" class="img-fluid image-wrapper">
                     <h5>Content Page</h5>
-                    <img src="../../assets/images/plato5.png" class="img-fluid image-wrapper">
+                    <img src="../../assets/images/plato/plato5.png" class="img-fluid image-wrapper">
                     <h5>Content Creation Page</h5>
-                    <img src="../../assets/images/plato6.png" class="img-fluid image-wrapper">
+                    <img src="../../assets/images/plato/plato6.png" class="img-fluid image-wrapper">
                     <h5>Content Creators Information Page</h5>
-                    <img src="../../assets/images/plato7.png" class="img-fluid image-wrapper">
+                    <img src="../../assets/images/plato/plato7.png" class="img-fluid image-wrapper">
                     <h5>Verification Message Page</h5>
-                    <img src="../../assets/images/plato8.png" class="img-fluid image-wrapper">
+                    <img src="../../assets/images/plato/plato8.png" class="img-fluid image-wrapper">
                     <h5>Dashboard Page</h5>
-                    <img src="../../assets/images/plato9.png" class="img-fluid image-wrapper">
+                    <img src="../../assets/images/plato/plato9.png" class="img-fluid image-wrapper">
                     <h5>Content Upload Page</h5>
-                    <img src="../../assets/images/plato10.png" class="img-fluid image-wrapper">
+                    <img src="../../assets/images/plato/plato10.png" class="img-fluid image-wrapper">
                 </div>
                 <div class="col-md-2"></div>
             </div>
