--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -7,8 +7,8 @@
                     <h3 style="color: white;" class="mb-3 text-center">About Me</h3>
                     <p style="color: white;">
                         Hey, I am Saifil, a developer and designer. I have a background in computer science and
-                        recently graduated from the Interactive Media Management program. I have experience working with
-                        early-stage start-ups and assisting them in
+                        have graduated from the Interactive Media Management program. I have experience working with
+                       small organizations and assisting them in
                         building accessible and usable products. I love trying out new things and am constantly
                         learning. Apart from my work, I love playing chess and ping pong and hold an interest in
                         sustainable development, especially in the space of architecture.
