--- a/src/styles.sass
+++ b/src/styles.sass
@@ -187,6 +187,9 @@ p b
     border-radius: 20px
     font-weight: 500
 
+.project-type
+    opacity: 0.9
+
 @media only screen and (max-width: 576px)
     .introduction
         margin: 2rem 0
