--- a/src/app/project-list/project-list.component.html
+++ b/src/app/project-list/project-list.component.html
@@ -1,11 +1,11 @@
 <div class="container">
-  <h6 class="project-type">Active</h6>
+  <h6 class="project-type">Active Projects</h6>
   <div class="row">
     <div class="col-md-4 mb-3" *ngFor="let project of DevelopmentProjectList">
       <app-card [Project]="project"></app-card>
     </div>
   </div>
-  <h6 class="project-type">In progress</h6>
+  <h6 class="project-type">In Progress Projects</h6>
   <div class="row">
     <div class="col-md-4 mb-3" *ngFor="let project of WIPList">
       <app-card [Project]="project"></app-card>
