--- a/src/styles.sass
+++ b/src/styles.sass
@@ -188,7 +188,9 @@ p b
     font-weight: 500
 
 .project-type
-    opacity: 0.9
+    opacity: 0.8
+    margin-bottom: 10px
+    font-weight: bold
 
 @media only screen and (max-width: 576px)
     .introduction
